# githubproject

./: README.md  pyproject.toml  session_store.db
conf/: logging.yml
conf/base/: catalog.yml  parameters_newpipeline.yml
src/githubproject/: __init__.py  __main__.py
src/githubproject/pipelines/newpipeline/: __init__.py  nodes.py  pipeline.py
tests/pipelines/newpipeline/: test_pipeline.py
